# prelude

./: .gitignore  README.md
docs/: README.md
libprc/: main.prc  main.prh
libprc/memory/: main.prc  main.prh
libprc/string/: main.prc  main.prh
libprc/sys/: main.prc
src/api/: Header.h
src/emitter/: CMakeLists.txt  Header.h  emit.h  instruction.c  instruction.h  structs.c  structs.h
src/emitter/tests/: CMakeLists.txt  test.s  test_emitter.c
src/fileio/: CMakeLists.txt  Header.h  file.c  file.h
src/fileio/tests/: CMakeLists.txt  test_file.c
src/jit/: CMakeLists.txt  Header.h  ast.c  ast.h  debug.c  debug.h  jit.h  parser.c  parser.h  structs.c  structs.h
src/jit/tests/: CMakeLists.txt  test.pc  test_jit.c
src/log/: Header.h
src/memory/: CMakeLists.txt  Header.h  pmemory.c  pmemory.h
src/memory/tests/: CMakeLists.txt  test_memory.c
src/thread/: CMakeLists.txt  Header.h  prthread.c  prthread.h
src/thread/tests/: CMakeLists.txt  test_thread.c
src/utils/: CMakeLists.txt  Header.h  string_utils.c  string_utils.h  utils.h
src/utils/tests/: CMakeLists.txt  string_utils_test.c
